fixes route line not showing on minimap during tutorial

--- a/public/javascripts/SVLabel/css/svl-onboarding.css
+++ b/public/javascripts/SVLabel/css/svl-onboarding.css
@@ -1,9 +1,3 @@
-#tracker-holder {
-    position: absolute;
-    top: 0;
-    left: 935px;
-}
-
 #onboarding-holder {
     visibility: hidden;
 }
